[tool.poetry]
name = "comp100-2021f-ps0-emirhancakirr"
version = "0.1.0"
description = ""
authors = ["emirhancakirr <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
